# Auto-focus-assistant

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_copy.md  install-log.txt  lens_param.yml  main.cpp  param.yml
controller/: CMakeLists.txt  main.cpp
controller/include/: SubController.h  controller.h
controller/include/CalController/: CalController.h
controller/include/Capturer/: Capturer.h
controller/include/FocusController/: FocusController.h
controller/include/SleepPoseController/: SleepPoseController.h
controller/src/: controller.cpp
controller/src/CalController/: CalController.cpp
controller/src/Capturer/: Capturer.cpp
controller/src/FocusController/: FocusController.cpp
controller/src/SleepPoseController/: SleepPoseController.cpp
include/: KalmanFilterX.hpp  SerialPort.h  TransferData.h  calibrator.h  data.h  lens_param.h  param.h  processor.h  protocol.h  realsense_reader.h
modules/: CMakeLists.txt
modules/calibrator/: CMakeLists.txt
modules/calibrator/include/: calibrator.h
modules/calibrator/src/: calibrator.cpp
modules/decider/: CMakeLists.txt
modules/decider/include/: decider.h
modules/decider/src/: decider.cpp
modules/detector/: CMakeLists.txt
modules/detector/include/: detector.h
modules/detector/include/FaceLight/: FaceLight.h
modules/detector/include/ObjectLight/: ObjectLight.h
modules/detector/include/body/: body.h
modules/detector/include/face/: face.h
modules/detector/include/object/: object.h
modules/detector/include/sleep/: sleep.h
modules/detector/src/: detector.cpp
modules/detector/src/FaceLight/: FaceProcessorLight.cpp
modules/detector/src/ObjectLight/: ObjectProcessorLight.cpp
modules/detector/src/body/: BodyProcessor.cpp
modules/detector/src/face/: FaceProcessor.cpp
modules/detector/src/object/: ObjectProcessor.cpp
modules/detector/src/sleep/: SleepProcessor.cpp
modules/dis/: CMakeLists.txt
modules/dis/include/: KalmanFilterX.hpp  dis.h
modules/dis/src/: dis.cpp
modules/motor/: CMakeLists.txt
modules/motor/include/: MotorData.h  motor.h
modules/motor/include/NucleusN/: NucleusN.h
modules/motor/include/NucluesN/: NucluesN.h
modules/motor/include/SteppingMotor/: MotorData.h  SteppingMotor.h
modules/motor/include/stepping_motor/: stepping_motor.h
modules/motor/src/: MotorData.cpp
modules/motor/src/NucleusN/: NucleusN.cpp
modules/motor/src/NucluesN/: NucluesN.cpp
modules/motor/src/SteppingMotor/: MotorData.cpp  SteppingMotor.cpp
modules/motor/src/stepping_motor/: stepping_motor.cpp
modules/param/include/: lens_param.h
modules/param/src/: param.cpp
modules/processor/: CMakeLists.txt
modules/processor/include/: processor.h
modules/processor/src/: face_processor.cpp  frame_processor.cpp
modules/reader/: CMakeLists.txt
modules/reader/include/: reader.h
modules/reader/include/RsReader/: RsReader.h
modules/reader/src/RsReader/: RsReader.cpp
modules/serial/include/: SerialPort.h  data.h
modules/serial/src/: data.cpp
modules/temp/: motor_processor.cpp
modules/tools/: CMakeLists.txt
param/: CMakeLists.txt  lens_param.yml  logic.names  param.yml  test1.json  test2.json  test3_fill_hole.json
param/include/: LensParam.h  param.h
param/src/: LensParam.cpp  param.cpp
serial/: CMakeLists.txt
serial/include/: SerialPort.h  TransferData.h
serial/src/: SerialPort.cpp
src/: SerialPort.cpp  calibrator.cpp  data.cpp  dis_processor.cpp  face_processor.cpp  frame_processor.cpp  lens_param.cpp  main.cpp  motor_processor.cpp  param.cpp  realsense_reader.cpp
tools/: CMakeLists.txt
tools/include/: tools.h
tools/include/LogicTools/: LogicTools.h
tools/src/LogicTools/: LogicTools.cpp
